# wxCleanGraduator

./: .gitignore  CMakeLists.txt  main.cpp
catalogs/: displacements  gauges  precision_classes  pressure_units  printers
src/app/: CMakeLists.txt
src/app/bootstrap/: ApplicationBootstrap.cpp  ApplicationBootstrap.h  UiBootstrap.cpp  UiBootstrap.h
src/app/properties/: MainPropertySource.cpp  MainPropertySource.h
src/application/: CMakeLists.txt
src/application/models/: PressureUnit.h  Printer.h
src/application/models/batch/: BatchContext.h
src/application/models/catalog/: Displacement.h  Gauge.h  GaugePrecision.h  PressureUnit.h
src/application/models/logging/: LogEntry.h  LogLevel.h  LogSource.h
src/application/orchestrators/settings/: CalibrationSettingsQuery.cpp  CalibrationSettingsQuery.h
src/application/orchestrators/video/: VideoSourceManager.cpp  VideoSourceManager.h
src/application/ports/batch/: IBatchContextProvider.h
src/application/ports/calibration/orchestration/: CalibrationOrchestratorObserver.h
src/application/ports/calibration/recording/: CalibrationRecorderInput.h  ICalibrationRecorder.h
src/application/ports/logging/: ILogSink.h  ILogSource.h  ILogSourcesStorage.h
src/application/ports/video/: IVideoAngleSourcesStorage.h
src/application/property/: PropertyEngine.h  PropertyObserverRegistry.cpp  PropertyObserverRegistry.h  PropertyRegistry.cpp  PropertyRegistry.h  PropertySourceBase.cpp  PropertySourceBase.h  PropertyUtils.h
src/application/settings/: SettingsService.cpp  SettingsService.h
src/domain/: CMakeLists.txt
src/domain/core/angle_source/: AngleSourceError.h  AngleSourceEvent.h  AngleSourcePacket.h
src/domain/core/calibration/analysis/: CalibrationCellIssue.h  CalibrationIssueSeverity.h
src/domain/core/calibration/calculation/: CalibrationCalculatorInput.h  CalibrationCellComputation.h
src/domain/core/calibration/common/: CalibrationMode.h  GaugePrecision.h  PressurePoints.h
src/domain/core/calibration/recording/: AngleSample.h  CalibrationSession.h  CalibrationSessionId.h  PointId.h  PressureSample.h  TimeSeries.cpp  TimeSeries.h
src/domain/core/calibration/result/: CalibrationCell.h  CalibrationCellKey.h  CalibrationResult.h
src/domain/core/calibration/strategy/: CalibrationStrategyBeginContext.h  CalibrationStrategyFeedContext.h  CalibrationStrategyVerdict.h
src/domain/core/common/: Angle.h  AngleUnit.h  Pressure.h  PressureUnit.cpp  PressureUnit.h  SourceId.h  Timestamp.h
src/domain/core/motor/: MotorDirection.h  MotorError.h  MotorEvent.h  MotorFlapsState.h  MotorFrequency.cpp  MotorFrequency.h  MotorLimitsState.h  MotorState.h
src/domain/core/pressure_source/: PressurePacket.h  PressureSourceError.h  PressureSourceEvent.h
src/domain/core/property/: PropertyField.h  PropertyId.h  PropertyValue.h
src/domain/core/telemetry/: TelemetryField.h  TelemetryValue.h
src/domain/core/video_overlay/: VideoOverlayConfig.h
src/domain/core/video_source/: PixelFormat.h  VideoAngleSource.h  VideoBuffer.h  VideoFrame.h  VideoFramePacket.h  VideoSourceError.h  VideoSourceEvent.h
src/domain/ports/angle_source/: IAngleSink.h  IAngleSource.h  IAngleSourceObserver.h
src/domain/ports/calibration/calculation/: ICalibrationCalculator.h
src/domain/ports/calibration/recording/: ICalibrationRecorder.h
src/domain/ports/calibration/strategy/: ICalibrationStrategy.h
src/domain/ports/catalog/: ICatalog.h
src/domain/ports/clock/: IClock.h  ISessionClock.h
src/domain/ports/drivers/motor/: IMotorDriver.h  IMotorDriverObserver.h
src/domain/ports/logging/: ILogger.h
src/domain/ports/pressure_source/: IPressureSink.h  IPressureSource.h  IPressureSourceObserver.h
src/domain/ports/property/: IPropertyObserver.h  IPropertySource.h
src/domain/ports/settings/: ISettingsStorage.h
src/domain/ports/telemetry/: ITelemetrySource.h
src/domain/ports/video_overlay/: IVideoOverlay.h
src/domain/ports/video_source/: IVideoSink.h  IVideoSource.h  IVideoSourceObserver.h
src/infrastructure/: CMakeLists.txt
src/infrastructure/catalog/: Catalog.cpp  Catalog.h  FileCatalog.cpp  FileCatalog.h
src/infrastructure/clock/: SessionClock.cpp  SessionClock.h  UptimeClock.cpp  UptimeClock.h
src/infrastructure/factory/: VideoSourceFactory.cpp  VideoSourceFactory.h
src/infrastructure/logging/: ConsoleLogger.cpp  ConsoleLogger.h  FileLogger.cpp  FileLogger.h  NamedMultiLogger.cpp  NamedMultiLogger.h
src/infrastructure/settings/: InMemorySettingsStorage.h
src/infrastructure/storage/: LogSourcesStorage.cpp  LogSourcesStorage.h  VideoAngleSourcesStorage.cpp  VideoAngleSourcesStorage.h
src/infrastructure/video_renderer/: VideoRenderer.cpp  VideoRenderer.h
src/infrastructure/video_renderer/detail/: GLRenderer.cpp  GLRenderer.h  IRenderer.h
src/infrastructure/video_sources/: VideoSourceNotifier.cpp  VideoSourceNotifier.h  VideoSourcePorts.h
src/infrastructure/video_sources/linux/gstreamer/: GStreamerCamera.cpp  GStreamerCamera.h  GStreamerCameraConfig.h
src/infrastructure/video_sources/linux/v4l/: V4LCamera.cpp  V4LCamera.h  V4LCameraConfig.h
src/infrastructure/video_sources/windows/dshow/: DShowCamera.cpp  DShowCamera.h  DShowCameraConfig.h  SampleGrabberCB.cpp  SampleGrabberCB.h
src/shared/: CMakeLists.txt
src/shared/ini/: IniFile.cpp  IniFile.h  IniSectionView.h
src/shared/logging/: FmtLogger.h
src/shared/param/: IParameterStore.h  ParameterView.h
src/shared/thread/: ThreadSafeObserverList.h  ThreadWorker.cpp  ThreadWorker.h
src/shared/watchdog/: SoftwareWatchdog.cpp  SoftwareWatchdog.h
src/ui/: CMakeLists.txt
src/ui/wx/bindings/: WxBindingFactory.h  WxBindingUtils.h  WxBoolBinding.cpp  WxBoolBinding.h  WxSliderFloatBinding.cpp  WxSliderFloatBinding.h  WxTextBinding.cpp  WxTextBinding.h
src/ui/wx/main_window/: WxMainWindow.cpp  WxMainWindow.h
src/ui/wx/panels/: WxPropertyGridBuilder.cpp  WxPropertyGridBuilder.h
src/ui/wx/video/: VideoGridWidget.cpp  VideoGridWidget.h  WxVideoGridWidget.cpp  WxVideoGridWidget.h
